canary/hello-world-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-2
spec:
  selector:
    app: hello
  ports:
  - name: hello
    protocol: TCP
    port: 60000
    targetPort: 50000
