canary/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: canary-frontend-gateway
spec:
  selector:
    istio: canary-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
    -  "*"
  gateways:
  - canary-frontend-gateway
  http:
  - route:
    - destination:
        host: hello-world-1.default.svc.cluster.local
        subset: v1
        port:
          number: 60000
      weight: 70
    - destination:
        host: hello-world-1.default.svc.cluster.local
        subset: v2
        port:
          number: 60000
      weight: 30
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-world
spec:
  host: hello-world-1.default.svc.cluster.local  #service名稱
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
